# api/swagger.yaml
@@ -18,12 +18,59 @@ definitions:
       url:
         type: string
     type: object
+  v1.PostFileResponse:
+    properties:
+      id:
+        type: string
+    type: object
+  v1.PostPlaceRequest:
+    properties:
+      lat:
+        type: integer
+      lng:
+        type: integer
+    type: object
+  v1.PostPlaceResponse:
+    properties:
+      id:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact: {}
   title: Place-API Service.
   version: 0.1.0
 paths:
+  /api/v1/file:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Method for uploading file to storage
+      operationId: PostFile
+      parameters:
+      - description: Body with file
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.PostFileResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.Error'
+      summary: Upload file
+      tags:
+      - file_api
   /api/v1/file/{id}:
     get:
       description: Method returns file meta and temporary url to download
@@ -41,6 +88,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/v1.GetFileResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.Error'
         "404":
           description: Not Found
           schema:
@@ -52,4 +103,35 @@ paths:
       summary: Get file info
       tags:
       - file_api
+  /api/v1/place:
+    post:
+      consumes:
+      - application/json
+      description: Method for object creation
+      operationId: PostPlace
+      parameters:
+      - description: Create object
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/v1.PostPlaceRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v1.PostPlaceResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/v1.Error'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/v1.Error'
+      summary: Create object
+      tags:
+      - place_api
 swagger: "2.0"
